[package]
name = "rte"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7"
bitflags = "1.2"
libc = "0.2"
once_cell = { version = "1.10", optional = true }
static_assertions = "1"
nonmax = "0.5"

ffi = { package = "rte-sys", path = "../rte-sys" }
mac-addr = { path = "../mac-addr" }
rte-eal = { path = "../rte-eal", optional = true }
rte-error = { path = "../rte-error" }
rte-test-macros = { path = "../rte-test-macros", optional = true }

[dev-dependencies]
once_cell = "1.10"

rte-eal = { path = "../rte-eal" }
rte-test-macros = { path = "../rte-test-macros" }
util-macros = { path = "../util-macros" }

[features]
test-utils = ["rte-test-macros", "rte-eal", "once_cell"]
